# tethered

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  COOKBOOK.md  SUBPROCESS.md
examples/: 01_basic_activate.py  02_scope_context_manager.py  03_scope_decorator.py  04_global_with_scope.py  05_global_with_nested_scopes.py  06_locked_mode.py  07_log_only.py  08_scope_in_threads.py  09_async_scope.py  10_package_maintainer.py  11_subprocess_control.py  12_scope_subprocess.py
scripts/: cppcheck.sh  wheel_smoke_test.py
src/: tethered.pth
src/tethered/: __init__.py  _autoactivate.py  _core.py  _guardian.c  _guardian.pyi  _policy.py
tests/: conftest.py  test_autoactivate.py  test_core.py  test_guardian.py  test_policy.py  test_subprocess.py
tests_examples/: test_examples.py
